# mqtt-server-n-client-n-server-private-pki

./: .env  Justfile  README.md  pyproject.toml
client/easy-rsa/pki/private/: client.example.tld.key  client.example.tld.key.raw
mosquitto/: mosquitto.conf
mosquitto/certs/: crl.pem  mqtt.example.tld.crt  mqtt.example.tld.key
pki/easy-rsa/pki/: index.txt  index.txt.old  serial  serial.old
pki/easy-rsa/pki/certs_by_serial/: 32B44D41CBD4AE94222E4C515E2CF734.pem  4417EECDF9CB586CE9BF35CE4E991AFC.pem
pki/easy-rsa/pki/inline/: client.example.tld.inline
pki/easy-rsa/pki/reqs/: client.example.tld.req
python_client/: mqtt_pub.py  mqtt_sub.py
python_client/certs/: ca.crt  client.example.tld.crt  client.example.tld.key  client.example.tld.key.raw
